# MasterThesisCode

./: Attribution.py  BackupExperimentData.py  Classification.py  CweTaxonomy.py  DataPreparation.py  EagerModel.py  Environment.py  Frontends.py  Helpers.py  LICENSE  Main.py  NaluLayer.py  README.md  SummarizeJulietExperiments.py  Training.py
ClangAstToJson/: .gitignore  CMakeLists.txt  main.cpp
tests/: Utils.py  test_frontend.py  test_taxonomy.py
